# descriptors-go

./: Makefile  README.md  go.mod  go.sum
.github/workflows/: main.yaml
descriptors/: descriptors.go  descriptors_test.go  plan.go  wasm.go  wasm_test.go  wrapper.wasm
descriptors/testdata/: README.md  compile.txt  derivation.json  opcodes.txt
wrapper/: Cargo.toml  install-and-compile.sh  lift.rs  plan.rs  wrapper.rs
